Version 1.0.0+dev
- menu item conditions can be manually registered as services now

Version 1.0.0
- added conditional menu items
- menus are now created by a factory (in DIC extension)
- renamed constants in MenuExtension

Version 0.3.0
- it is possible to define new menu types from neon
- added support for translating

Version 0.2.0
- allowed setting menu's html id
- menu type's is now determined in template, see documentation
- changed thrown exceptions
- added support for custom menu types

Version 0.1.0
- first version